syntax = "proto3";
package moviecontroller;
import "common/common.proto";
option java_package = "br.com.via.grpcstreamdemo.userpreferences";
option java_multiple_files = true;

message UserPreferencesRequest {
  string userid = 1;
  common.Movie movie = 2;
}
message UserPreferencesResponse {
  common.Movie movie = 1;
}
service UserPreferencesService {
  // Bidirectional streaming rpc call to receive a stream of movies shortlisted based on user preferences
  rpc getShortlistedMovies(stream UserPreferencesRequest) returns (stream UserPreferencesResponse) {};
}